# Amalgam

./: .gitignore  README.md  context.py  llm.py  main.py  pyproject.toml
src/amalgam/: context.py  llm.py  main.py
